# bazaarhub_backend

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  DATABASE.md
gateway/: nginx.conf
scripts/: seed_products.py
services/auth/: Dockerfile
services/cart/: Dockerfile
services/orders/: Dockerfile
services/products/: Dockerfile
src/backend/services/auth/: __init__.py  main.py  models.py  routes.py  service.py
src/backend/services/cart/: __init__.py  main.py  models.py  routes.py  service.py
src/backend/services/orders/: main.py  models.py  routes.py  service.py
src/backend/services/products/: __init__.py  main.py  models.py  routes.py  service.py
src/backend/shared/: __init__.py  config.py  database.py  email.py  logging.py  otp.py  schemas.py
src/backend/shared/auth/: __init__.py  dependencies.py  jwt.py
